src/components/BottomNav/BottomNav.sass
@import '@/mixins/typography.sass'
@import '@/mixins/elevation.sass'
.BottomNav
  @include elevation(2)
  @include typography(small)
  position: fixed
  left: 0
  bottom: 0
  height: 64px
  width: 100vw
  display: flex
  justify-content: space-around
  align-items: center
  color: var(--foreground)
  z-index: 10000
  background: var(--background)
  .route
    flex-grow: 1
    flex-basis: 0
    opacity: .6
    transform: scale(.9)
    transition: opacity .3s, transform .3s
    &.active
      opacity: 1
      transform: scale(1)
    .emoji
      display: block
      font-size: 24px
      line-height: 24px
      height: 24px
      width: 24px
      margin: 0 auto 4px auto
    .title
      display: block
      text-align: center

